# jimeng-gateway

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.agents/skills/jimeng-gateway-api/: SKILL.md
.github/workflows/: deploy.yml
docs/: auth-design.md  seedance-2.0-integration.md
jimeng-free-api-fork/src/api/controllers/: videos.ts
jimeng-free-api-fork/src/api/routes/: videos.ts
jimeng-free-api-fork/src/lib/: browser-service.ts
rauthy/: config.toml  rauthy.cfg  setup.sh
scripts/: deploy.sh  jimeng-gateway.service
src/: config.rs  main.rs  webhook.rs
src/auth/: api_key.rs  backend.rs  middleware.rs  mod.rs  oidc.rs  password.rs  rate_limiter.rs  usage.rs
src/db/: mod.rs
src/docker/: mod.rs
src/jimeng/: abogus.rs  auth.rs  browser.rs  curl_transport.rs  mod.rs  models.rs  poll.rs  submit.rs  upload.rs
src/pool/: mod.rs  session.rs
src/queue/: mod.rs  worker.rs
src/routes/: auth_routes.rs  compat.rs  keys.rs  logs.rs  me.rs  mod.rs  sessions.rs  tasks.rs  usage.rs
tasks/: integration-plan.md  lessons.md
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  styles.css
web/src/lib/: api.js  i18n.jsx
web/src/pages/: LoginPage.jsx
