[package]
name = "jimeng-gateway"
version = "0.1.0"
edition = "2024"
description = "Video generation gateway for Jimeng/Seedance API"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "gzip", "brotli", "deflate"] }

# Jimeng API direct connection
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
md-5 = "0.10"
crc32fast = "1"
hmac = "0.12"
lazy_static = "1"
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"

# Async
futures = "0.3"

# Auth / SSO
axum-login = "0.18"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
rand = "0.9"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
